--- a/OpenGLModelViewer/OpenGLModelViewer.vcxproj
+++ b/OpenGLModelViewer/OpenGLModelViewer.vcxproj
@@ -161,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\..\Downloads\pop_cat.png" />
+    <Image Include="brick.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
