--- a/OpenGLModelViewer/OpenGLModelViewer.vcxproj.filters
+++ b/OpenGLModelViewer/OpenGLModelViewer.vcxproj.filters
@@ -75,5 +75,8 @@
     <Image Include="..\..\..\..\Downloads\pop_cat.png">
       <Filter>Resource Files\Textures</Filter>
     </Image>
+    <Image Include="brick.png">
+      <Filter>Resource Files\Textures</Filter>
+    </Image>
   </ItemGroup>
 </Project>
